ch08/network/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-deny-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: sensitive
  policyTypes:
  - Ingress
  - Egress
