ch08/network/networkpolicy-ip-block-except.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ipblock-except
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.0.0/16
        # change your cider to shut it down
        #except:
        # - 172.16.n.n/12

  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
