ch08/network/networkpolicy-ip-block.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ipblock
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        # 172.16.0.1 = 172.16.0.254
        cidr: 172.16.0.0/16
  egress:
  - to:
    - ipBlock:
        # 172.16.0.1 = 172.16.127.254
        cidr: 172.16.0.0/17
